--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,10 +1,46 @@
 .header {
   background: #83C5BE;
-  height: 10vh;
   width: 100%;
+  height: 70px;
+  padding: 0 2%;
   display: flex;
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   justify-content: space-between;
 }
 
+.inputWrapper {
+  position: relative;
+}
+
+.styledInput {
+  padding: 5px 30px 5px 15px; 
+  height: 30px;
+  font-size: 14px;
+  width: 300px;
+  background: #FFDDD2;
+  border: none;
+  border-radius: 6px;
+  
+}
+::placeholder { color: #99B0AE; }
+
+.searchIcon {
+  position: absolute;
+  right: 10px;
+  top: 45%;
+  transform: translateY(-50%);
+  width: 14px;
+  height: 14px;
+  pointer-events: none;
+}
+
+
+
+.NavBar{
+  display: flex;
+  width: 8%;
+  justify-content: space-between;
+}
 /*# sourceMappingURL=Header.module.css.map */
