--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   align-items: start;
   gap: 1rem;
+  background-color: #FFDDD2;
+  // overflow:hidden;
+  // word-wrap: break-word;
+  max-width: 100%;
 
   aside {
     display: flex;
@@ -10,5 +14,6 @@
     width: 20%;
     background: #006D77;
     height: 90vh;
+    padding: 2%;
   }
 }
