feat: restructure layout components and update styles

--- a/src/styles/AddTask.module.scss
+++ b/src/styles/AddTask.module.scss
@@ -1,10 +1,10 @@
 .All{
-    padding: 2%;
-    width: 80%;
+    // padding: 2%;
+    // width: 80%;
 }
 
 .DivAll{
-    width: 84%;
+    // width: 84%;
     background-color: #83C5BE;
     height: 130px;
     border-radius: 3px;
