--- a/src/styles/Completed.module.scss
+++ b/src/styles/Completed.module.scss
@@ -1,13 +1,13 @@
-.AllTop{
-    margin: 3.5% 0;
-}
-.All{
-    padding: 2%;
-    width: 80%;
-}
+// .AllTop{
+//     margin: 3.5% 0;
+// }
+// .All{
+//     padding: 2%;
+//     width: 80%;
+// }
 
 .DivAll{
-    width: 84%;
+    // width: 84%;
     background-color: #83C5BE;
     height: 130px;
     border-radius: 3px;
