--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,14 +1,10 @@
 .homePage{
-    /* padding: 100px 5%; */
-    display: block;
-    width: 80%;
-    max-width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
 .right{
-    padding: 110px 10% 110px 10%;
+    // padding: 110px 10% 110px 10%;
     .h1{
         font-weight: 600;
         color: #006D77;
@@ -18,7 +14,7 @@
     }
 }
 .left{
-    padding: 110px 15% 110px 0;
+    // padding: 110px 15% 110px 0;
     .h1{
         font-weight: 600;
         color: #006D77;
@@ -34,7 +30,7 @@
     gap: 30px; 
 }
 
-.buttonn {
+.button {
     margin-top: 15%;
     display: flex;
     flex-direction: column;
@@ -49,7 +45,7 @@
 .line{
     width: 4px;
     margin-top: 110px;
-    height: 90hv;
+    height: 90vh;
     border-radius: 5px;
     background-color: #006D77;
 }
