feat: implemented DatePicker component with styles and outside click handling
* Added DatePicker component for date selection with customizable props
* Introduced useOutsideClick hook for handling clicks outside the component

--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -1,8 +1,5 @@
 .dropdownContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  width: 45%;
+  min-width: 180px;
 }
 
 .dropdownLabel {
