refactor: updated task management across the app
* Refactored App component to include useInitialize hook and updated imports for task pages.
* Modified Card component to accept a Task object and removed unused props.
* Updated HomePage to utilize the new Card structure and improved task fetching logic.
* Modified Modal component

--- a/src/pages/CompletedTasks/Completed.module.scss
+++ b/src/pages/CompletedTasks/Completed.module.scss
@@ -1,10 +1,4 @@
-.All{
-    // padding: 2%;
-    // width: 80%;
-}
-
 .DivAll{
-    // width: 84%;
     background-color: #83C5BE;
     height: 130px;
     border-radius: 3px;
@@ -18,26 +12,9 @@
 }
 .AllTop{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end; 
+    align-items: center;   
     margin: 3% 0;
-}
-
-
-.select {
-    border: 2px solid #006D77;
-    color: #006D77;
-    padding: 7px 12px;
-    border-radius: 2px;
-    font-size: 14px;
-    font-weight: 600;
-    background: none;
-    margin-right: 15px;
-    transition: border-color 0.3s;
-}
-
-.activeSelect {
-    background: #006D77;
-    color: white;
 }
 
 
@@ -60,7 +37,7 @@
   .searchIcon {
     position: absolute;
     right: 10px;
-    top: 45%;
+    top: 48%;
     transform: translateY(-50%);
     width: 14px;
     height: 14px;
