--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,6 +1,9 @@
 .homePage{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 10%;
+    margin: 0 auto;
+    max-width: 800px;
 }
 
 .right{
@@ -9,16 +12,15 @@
         color: #006D77;
         padding-bottom: 3%;
         border-bottom: 5px solid #006D77;
-        margin-bottom: 20%;
+        margin-bottom: 50px;
     }
 }
 .left{
-
     .h1{
         font-weight: 600;
         color: #006D77;
         padding-bottom: 3%;
-        margin-bottom: 20%;
+        margin-bottom: 50px;
     }
 }
 
@@ -29,7 +31,7 @@
 }
 
 .button {
-    margin-top: 15%;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;  
@@ -43,7 +45,7 @@
 .line{
     width: 4px;
     margin-top: 110px;
-    height: 80vh;
+    height: 60vh;
     border-radius: 5px;
     background-color: #006D77;
 }
