feat: integrate theming and layout enhancements
* Added ThemeProvider for managing light and dark themes across the application.
* Updated App component to include global styles and theme context.
* Refactored Aside and Header components to use styled components for better theming support.
* Adjusted layout styles for improved responsiveness and visual consistency.

--- a/src/layouts/Aside/Aside.module.scss
+++ b/src/layouts/Aside/Aside.module.scss
@@ -35,5 +35,12 @@ a{
 }
 
 aside {
+    display: flex; 
+    flex-direction: column;
+    gap: 1rem;
+    width: 20%;
+    // background: #006D77;
+    height: 100%;
+    padding: 2%;
     transition: width 0.3s ease;
 }
