--- a/src/layouts/Header/Header.module.scss
+++ b/src/layouts/Header/Header.module.scss
@@ -1,7 +1,6 @@
 .header {
   background: #83C5BE;
-  height: 10vh;
-  min-height: 60px;
+  height: 80px;
   width: 100%;
   display: flex;
   padding: 10px 2%;
