feat: implemented drag-and-drop functionality for task management
* Added DraggableCard and DroppableCardList components to enable drag-and-drop reordering of tasks.
* Updated Card and CardList components to support new drag-and-drop features.
* Enhanced AllTasks and CompletedTasks pages to utilize CardList for displaying tasks.
* Integrated DndContext in HomePage for managing drag-and-drop events and task status toggling.

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -7,6 +7,7 @@
     color: #FFDDD2;
     border-radius: 7px;
     padding: 16px;
+    // z-index: -1;
 }
 
 .titleContainer {
@@ -41,6 +42,7 @@
 .stateTask{
     display: flex;
     align-items: center;
+    cursor: pointer;
 
     .mark{
         width: 18px;
